tests/NormalTests/paczka1/fuzzy1/98255427.err
Error in line 1: DQziO4yMfLj S502 49,0
Error in line 2: CekTzU7 S115 77,2
Error in line 7: DQziO4yMfLj S115 21,0
Error in line 26: i6KcHN S115 80,6
Error in line 28: d7UdEH S115 60,3
Error in line 18: CekTzU7 S502 99,4
Error in line 25: S115 A214 93,0
